@@ -48,21 +48,26 @@ pipeline {
         }
 
         stage('CODE ANALYSIS with SONARQUBE') {
+            agent {
+                // Use specific Java version for this stage
+                tools {
+                    jdk 'JAVA11'
+                }
+            }
             environment {
                 scannerHome = tool 'sonarscanner'
             }
             steps {
                 withSonarQubeEnv('sonar-pro') {
-                    sh """JAVA_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED" \\
-                    \${scannerHome}/bin/sonar-scanner \\
-                    -Dsonar.projectKey=vprofile \\
-                    -Dsonar.projectName=vprofile-repo \\
-                    -Dsonar.projectVersion=1.0 \\
-                    -Dsonar.sources=src/ \\
-                    -Dsonar.java.binaries=target/ \\
-                    -Dsonar.junit.reportsPath=target/surefire-reports/ \\
-                    -Dsonar.jacoco.reportsPath=target/jacoco.exec \\
-                    -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml"""
+                    sh """${scannerHome}/bin/sonar-scanner \\
+                        -Dsonar.projectKey=vprofile \\
+                        -Dsonar.projectName=vprofile-repo \\
+                        -Dsonar.projectVersion=1.0 \\
+                        -Dsonar.sources=src/ \\
+                        -Dsonar.java.binaries=target/ \\
+                        -Dsonar.junit.reportsPath=target/surefire-reports/ \\
+                        -Dsonar.jacoco.reportsPath=target/jacoco.exec \\
+                        -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml"""
                 }
 
                 timeout(time: 10, unit: 'MINUTES') {
